Fix spacing for header / footer

--- a/app/packs/application/styles/partials/_layout.sass
+++ b/app/packs/application/styles/partials/_layout.sass
@@ -84,27 +84,48 @@ html,body
       padding: 0 4px
       margin: 0 4px
 
-  .links
+  nav.links
     padding: 0
     margin: 10px 0
     font-size: 18px
     line-height: 18px
 
-    *
-      padding: 0 4px
-      margin: 0 4px
-      display: inline-block
+    ul
+      display: flex
+      margin: 0
+      padding: 0
+      align-items: center
+      justify-content: center
+      flex-wrap: wrap
 
-  .social
+      li
+        display: block
+
+        a
+          display: block
+          padding: 0 4px
+          margin: 0 4px
+
+  nav.social
     padding: 0
     margin: 10px 0
     font-size: 18px
     line-height: 18px
 
-    *
-      padding: 0 4px
-      margin: 0 4px
-      display: inline-block
+    ul
+      display: flex
+      margin: 0
+      padding: 0
+      align-items: center
+      justify-content: center
+      flex-wrap: wrap
+
+      li
+        display: block
+
+        a
+          padding: 0 4px
+          margin: 0 4px
 
 @media (min-width: 320px) and (max-width: 960px)
 
